tests/fixtures/invalid/int_bitor_dict.py
# Cannot bitwise OR Int and Dict[str, int]
x: int = 1 | {"a": 1}
